<resources>
    <string name="app_name">Recipes</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Clear Recipes</string>
    <string name="action_export">Export Recipe</string>
    <string name="title_activity_add_recipe">Add Recipe</string>
    <string name="title_activity_display_recipe">Display Recipe</string>
    <string name="title_activity_settings">Settings</string>

    <!--TODO: create strings xml values as needed-->

    <!--AddRecipeActivity-->
    <string name="recipe_title_hint">Recipe Name</string>
    <string name="recipe_serves_hint">Serves how many?</string>
    <string name="recipe_prep_time_hint">prep time?</string>
    <string name="recipe_cook_time_hint">cook time?</string>
    <string name="recipe_ingredients_list_hint">Ingredient list</string>
    <string name="recipe_next_ingredient_hint">Next ingredient</string>
    <string name="recipe_directions_list_hint">Directions</string>
    <string name="recipe_next_direction_hint">Next direction</string>

    <string name="add_button_label">Add</string>

    <!--DisplayRecipeActivity-->
    <string name="display_servings_prefix">Serves: </string>
    <string name="display_prep_time_prefix">Prep Time: </string>
    <string name="display_cook_time_prefix">Cook Time: </string>
    <string name="recipe_ingredients_label">Ingredients: </string>
    <string name="recipe_directions_label">Directions: </string>

    <!--Preferences-->
    <string name="pref_unit_choice_label">Units</string>
    <string name="pref_unit_choice_key">choice</string>
    <string name="pref_choice_imperial_label">Imperial</string>
    <string name="pref_choice_imperial_value" translatable="false">imperial</string>
    <string name="pref_choice_metric_label">Metric</string>
    <string name="pref_choice_metric_value" translatable="false">metric</string>

    <string name="pref_unit_abbreviation_label">Unit Names</string>
    <string name="pref_unit_abbreviation_key">length</string>
    <string name="pref_name_full_label">Full Names</string>
    <string name="pref_name_full_value" translatable="false">full</string>
    <string name="pref_name_short_label">Abbreviations</string>
    <string name="pref_name_short_value" translatable="false">short</string>

    <string name="pref_measurement_choice_label">Decimals or Fractions</string>
    <string name="pref_measurement_choice_key">dec-tion</string>
    <string name="pref_measurement_default_label">Default</string>
    <string name="pref_measurement_default_value" translatable="false">default</string>
    <string name="pref_measurement_decimal_label">Decimals (override)</string>
    <string name="pref_measurement_decimal_value" translatable="false">decimal</string>
    <string name="pref_measurement_fraction_label">Fraction (override)</string>
    <string name="pref_measurement_fraction_value" translatable="false">fraction</string>

</resources>
